// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`whoisonline should work for a custom outfit 1`] = `
{
  "pathname": "/s:test/get/ps2:v2/outfit",
  "searchParams": {
    "alias_lower": "test",
  },
}
`;

exports[`whoisonline should work for a custom outfit 2`] = `
{
  "pathname": "/s:test/get/ps2:v2/outfit_member",
  "searchParams": {
    "c:join": [
      "character_name^on:character_id^inject_at:character^show:name.first",
      "characters_online_status^on:character_id^inject_at:character^show:name.first",
    ],
    "c:limit": "65535",
    "c:show": "character_id",
    "outfit_id": "123456789",
  },
}
`;

exports[`whoisonline should work when API response is empty 1`] = `
{
  "pathname": "/s:test/get/ps2:v2/outfit_member",
  "searchParams": {
    "c:join": [
      "character_name^on:character_id^inject_at:character^show:name.first",
      "characters_online_status^on:character_id^inject_at:character^show:name.first",
    ],
    "c:limit": "65535",
    "c:show": "character_id",
    "outfit_id": "test-outfit-id",
  },
}
`;

exports[`whoisonline should work when everyone is offline 1`] = `
{
  "pathname": "/s:test/get/ps2:v2/outfit_member",
  "searchParams": {
    "c:join": [
      "character_name^on:character_id^inject_at:character^show:name.first",
      "characters_online_status^on:character_id^inject_at:character^show:name.first",
    ],
    "c:limit": "65535",
    "c:show": "character_id",
    "outfit_id": "test-outfit-id",
  },
}
`;

exports[`whoisonline should work when one member is online 1`] = `
{
  "pathname": "/s:test/get/ps2:v2/outfit_member",
  "searchParams": {
    "c:join": [
      "character_name^on:character_id^inject_at:character^show:name.first",
      "characters_online_status^on:character_id^inject_at:character^show:name.first",
    ],
    "c:limit": "65535",
    "c:show": "character_id",
    "outfit_id": "test-outfit-id",
  },
}
`;

exports[`whoisonline should work when some members are online 1`] = `
{
  "pathname": "/s:test/get/ps2:v2/outfit_member",
  "searchParams": {
    "c:join": [
      "character_name^on:character_id^inject_at:character^show:name.first",
      "characters_online_status^on:character_id^inject_at:character^show:name.first",
    ],
    "c:limit": "65535",
    "c:show": "character_id",
    "outfit_id": "test-outfit-id",
  },
}
`;
